# finn-help

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  news_impact_SBER_1d_lstm.pt  news_impact_SBER_3d_lstm.pt  news_impact_SBER_5d_lstm.pt  pyproject.toml  run_daily.ps1  seed_portfolio.py  test_news_system.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_expand_news_schema.py  002_add_sector_company_risk.py  0c80de3ebbbc_add_social_tables.py  2516b427423c_initial.py  352d595bf823_add_figi_constraints_fks.py  3ca2954675b9_add_channel_preferences_table.py  40358fbb008e_add_feature_cache_table.py  55e690c47941_add_all_missing_tables.py  79725bdf7d8c_add_favorites_table.py  7bec922bbd1a_add_financial_reports_and_bond_offerings.py  87ed6b3d580d_add_metric_snapshots_and_daily_reports.py  93001d0a0eed_add_market_events_table.py  a195f426825e_add_author_subscriptions_table.py  a1b2c3d4e5f6_fix_schema_issues.py  a8155cc3d091_add_fundamental_metrics_table.py  b1c2d3e4f5a6_add_nominal_column.py  b26d8d834001_add_users_table_and_user_id_to_.py  b40a7e5076b2_add_company_profile_corporate_event_alt_.py  b52c52467be4_add_subscriptions_and_notifications_.py  c01b61789293_add_muted_alerts_table.py  d056a6624c86_add_smart_alert_rules_table.py  fffa98744b80_add_notification_receipts_table.py
scripts/: migrate_exchange.py  real_events_data.py  seed_events.py
src/: cache.py  cli.py  config.py  constants.py  model_registry.py  reports.py  run_api.py  user_profile.py
src/alerts/: __init__.py  deduplicator.py  engine.py  generators.py  history.py  preferences.py  prioritizer.py  push.py  scorer.py  smart.py
src/analysis/: __init__.py  attribution.py  backtest.py  context.py  correlation.py  correlation_analysis.py  events.py  feature_drift.py  feature_store.py  fundamental.py  loader.py  ml_coordinator.py  multi_timeframe.py  personal_backtest.py  rebalancing.py  risk_explorer.py  sector.py  self_learning.py  service.py  stress.py  summarizer.py  technical.py  volatility.py  whatif.py
src/brokers/: market_data.py  sync.py  tbank.py  tinkoff.py
src/collectors/: __init__.py  alternative.py  base.py  bonds.py  cached_collector.py  cbr.py  financials.py  fundamental.py  (+7 more)
tests/: conftest.py  test_alert_enhancements.py  test_alert_generators.py  test_alert_scorer.py  test_alert_templates.py  test_alerts.py  test_alternative_data.py  test_analysis_service.py  test_anomaly_detection.py  test_api.py  test_audit.py  test_backtest.py  test_bonds.py  test_cache.py  test_causal_inference.py  test_cbr.py  test_cli.py  test_company_risk_aggregator.py  test_config.py  test_connection.py  test_constants.py  test_correlation.py  test_correlation_analysis.py  test_edge_cases.py  test_execution_engine.py  test_feature_store.py  test_fundamental.py  test_geo_risk.py  test_geopolitical_risk_engine.py  test_integration.py  test_llm_prompts.py  test_llm_router.py  test_loop.py  test_macro.py  test_ml.py  test_model_registry.py  test_moex.py  test_multi_timeframe.py  test_news.py  test_news_impact.py  (+28 more)
tools/: audit_formatters.py
web/: Dockerfile  package-lock.json  package.json
(+132 files in other folders)
