[project]
name = "finn-help"
version = "0.1.0"
description = "AI financial advisor for MOEX markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "networkx>=3.0",
    "groq>=1.4.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-telegram-bot>=22.8",
    "sse-starlette>=2.0",
    "prophet>=1.3.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.0",
    "transformers>=4.38.0",
    "torch>=2.3.0",
    "alembic>=1.18.4",
]

[project.scripts]
finn = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
