[project]
name = "finn-help"
version = "0.1.0"
description = "AI financial advisor for MOEX markets"
license = "BUSL-1.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "aiosqlite>=0.20",
    "pandas>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "feedparser>=6.0",
    "networkx>=3.0",
    "groq>=1.4.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-telegram-bot>=22.8",
    "sse-starlette>=2.0",
    "prophet>=1.3.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.9.0",
    "lightgbm>=4.6.0",
    "catboost>=1.2.0",
    "transformers>=4.38.0",
    "torch>=2.3.0",
    "alembic>=1.18.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "redis>=5.0",
    "cloudpickle>=3.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "sentence-transformers>=5.6.0",
]

[project.scripts]
finn = "src.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "pytest-cov>=6.0.0",
    "pip-audit>=2.7.0",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 40
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"
show_error_codes = true
warn_unused_ignores = true
exclude = ["tests/", "alembic/", "src/analysis/ml/prophet_model.py"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["t_tech.*", "prophet.*", "groq.*"]
ignore_missing_imports = true



[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
